--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL=mysql://root:wXJTFyccnZFIRCZdZbYiTsXlgUGRcaiu@junction.proxy.rlwy.net:21489/railway
+DATABASE_URL="mysql://root:wXJTFyccnZFIRCZdZbYiTsXlgUGRcaiu@junction.proxy.rlwy.net:21489/bbdd_spaweb"
