--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "lucide-react": "^0.428.0",
     "mysql2": "^3.11.3",
     "next": "^14.2.16",
+    "next-pwa": "^5.6.0",
     "postcss": "^8.4.47",
     "react": "^18",
     "react-dom": "^18",
