--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,4 +1,5 @@
 {
+  "id": "/",
   "name": "Spa Sentirse Bien",
   "short_name": "Spa",
   "description": "Spa y centro de bienestar",
@@ -8,6 +9,8 @@
   "orientation": "portrait",
   "background_color": "#fdbeff",
   "theme_color": "#fdbeff",
+  "prefer_related_applications": false,
+  "categories": ["lifestyle", "health"],
   "icons": [
     {
       "src": "/LogoTPI-192x192.png",
